@@ -7,6 +7,7 @@ VERSION 1.1:
   FIX: GStreamer engine must not allow non-audio filetypes in playlist.
 
 VERSION 1.0.1:
+  FIX: amaroK starting invisible when systray icon is disabled.
   ADD: Icon for "Menu" button in toolbar. Improves Usability.
   FIX: Playlist analyzer looks freaky on some systems (BR 83671).
   FIX: Display filename in title column for wav files (BR 83650).
